fix spacing

--- a/src/styles/skills.css
+++ b/src/styles/skills.css
@@ -1,7 +1,7 @@
 #skills {
     display: flex;
     flex-direction: column;
-    background-color: #212529;
+    background-color: #191919;
     background-size: cover;
     background-position: center;
     height: 100vh;
